# recordservice

./: README.md
client/: .gitignore  CMakeLists.txt  README.md  config.sh
client/api/: CMakeLists.txt  RecordService.thrift
client/cloudera/: pre_commit_hook.sh
client/cmake_modules/: FindGFlags.cmake  FindGTest.cmake  FindThrift.cmake
client/cpp/samples/: CMakeLists.txt  plan-request.cc  record-service-client.cc  rs-grep.cc
client/cpp/tests/: CMakeLists.txt  client-test.cc  external-mini-cluster-test.cc  external-mini-cluster.cc  external-mini-cluster.h  start-external-mini-rs-cluster.cc  subprocess.cc  subprocess.h  test-common.h
client/docs/: ReleaseNotes.md  _config.yml  examples.md  faq.md  index.md  install.md  vm.md
client/docs/_data/: sidebar.yml
client/docs/_includes/: footer.html  header.html
client/docs/css/: main.css
client/java/: .gitignore  pom.xml
client/java/avro/: pom.xml
client/java/avro-mr/: pom.xml
client/java/avro-mr/src/main/java/com/cloudera/recordservice/avro/: AvroJob.java
client/java/avro-mr/src/test/java/com/cloudera/recordservice/avro/: MapReduceTest.java
client/java/avro/src/main/java/com/cloudera/recordservice/avro/: GenericRecords.java  KeyValueRecords.java  RecordIterator.java  RecordUtil.java  SchemaUtils.java  SpecificRecords.java
client/java/avro/src/test/java/com/cloudera/recordservice/avro/: TestGenericRecord.java  TestKeyValueRecords.java  TestSpecificRecord.java
client/java/avro/src/test/resources/: nation.avdl  user.avdl
client/java/cluster-tests/: pom.xml
client/java/cluster-tests/src/test/java/com/cloudera/recordservice/tests/: ClusterConfiguration.java  ClusterController.java  ClusterLoadTest.java  JobQueue.java  LongHaul.java  MiniClusterController.java  TestMiniClusterController.java  ZooKeeperTest.java
client/java/core/: pom.xml
client/java/core/src/main/java/com/cloudera/recordservice/core/: ByteArray.java  Decimal.java  DelegationToken.java  FetchResult.java  GetSchemaResult.java  LogMessage.java  LoggingLevel.java  NetworkAddress.java  PlanRequestResult.java  ProtocolVersion.java  RecordServiceException.java  RecordServicePlannerClient.java  RecordServiceWorkerClient.java  Records.java  Request.java  Schema.java  Task.java  TaskStatus.java  ThriftUtils.java  TimestampNanos.java  UniqueId.java  WorkerClientUtil.java
client/java/core/src/main/java/com/cloudera/recordservice/util/: Preconditions.java
client/java/core/src/test/java/com/cloudera/recordservice/core/: SampleClient.java  TestBase.java  TestBasicClient.java  TestFaultTolerance.java  TestKerberosConnection.java  TestProxyUser.java  TestS3.java  TestSentry.java  TestStress.java  TestThriftUtils.java  TestUDFs.java  TestUnsupportedFunctionality.java  TestUtil.java  UtilTest.java
client/java/core/src/test/resources/: findbugs-exclude.xml
client/java/examples/: README.md  pom.xml
client/java/examples-spark/: README.md  pom.xml
client/java/examples/src/main/java/com/cloudera/recordservice/examples/: RSCat.java  SumQueryBenchmark.java
client/java/examples/src/resources/: user.avsc  userKey.avsc  userValue.avsc
client/java/hcatalog/: pom.xml
client/java/hcatalog-pig-adapter/: README.md  pom.xml
client/java/hcatalog-pig-adapter/src/main/java/com/cloudera/recordservice/pig/: HCatRSLoader.java  PigHCatUtil.java
client/java/hcatalog-pig-adapter/src/test/java/com/cloudera/recordservice/pig/: TestBase.java  TestHCatRSLoader.java  TestHCatRSLoaderSentry.java
client/java/hive/: README  pom.xml
client/java/hive/src/main/java/com/cloudera/recordservice/hive/: RecordServiceHiveInputFormat.java  RecordServiceObjectInspector.java  RecordServiceSerDe.java
client/java/mr/: pom.xml
client/java/mr/src/main/java/com/cloudera/recordservice/mapred/: RecordServiceInputFormat.java  RecordServiceInputFormatBase.java  RecordServiceInputSplit.java  TextInputFormat.java
client/java/mr/src/main/java/com/cloudera/recordservice/mapreduce/: RecordServiceInputFormat.java  RecordServiceInputFormatBase.java  RecordServiceInputSplit.java  TextInputFormat.java
client/java/mr/src/main/java/com/cloudera/recordservice/mr/: DecimalWritable.java  PlanUtil.java  RecordReaderCore.java  RecordServiceConfig.java  RecordServiceRecord.java  Schema.java  TaskInfo.java  TimestampNanosWritable.java  WorkerUtil.java  ZooKeeperUtil.java
client/java/mr/src/test/java/com/cloudera/recordservice/mapreduce/: MapReduceTest.java
client/java/recordservice-dist/: pom.xml
client/java/recordservice-dist/src/main/assembly/: bin.xml  src.xml
client/java/spark/: README  pom.xml
client/java/spark/src/main/scala/com/cloudera/recordservice/spark/: NextIterator.scala  RecordServiceConf.scala  RecordServiceRDD.scala  RecordServiceRDDBase.scala  RecordServiceRecordRDD.scala  RecordServiceRelation.scala  SchemaRecordServiceRDD.scala  package.scala
client/java/spark/src/test/scala/com/cloudera/recordservice/spark/: BasicClientSuite.scala  KerberosTestSuite.scala  LocalSparkContext.scala  SchemaClientSuite.scala  SharedSparkContext.scala  SparkSqlTest.scala  (+1 more)
client/jenkins/: bootstrap_toolchain.py  build_impala.sh  build_rs.sh  preamble_impala.sh  preamble_rs.sh  run_local_tests.sh  set_up_local_benchmarks.sh
client/perf-queries/spark/: query1.scala  query2.scala
client/perf-queries/sql/: query1.sql  query2.sql  query3.sql
client/perf-queries/tpcds/: tpcds-q27.sql  tpcds-q3.sql  tpcds-q34.sql  tpcds-q42.sql  tpcds-q43.sql  tpcds-q46.sql  tpcds-q47.sql  tpcds-q52.sql  tpcds-q53.sql  tpcds-q55.sql  tpcds-q6.sql  tpcds-q61.sql  tpcds-q63.sql  tpcds-q65.sql  tpcds-q68.sql  tpcds-q7.sql  tpcds-q73.sql  tpcds-q79.sql  tpcds-q8.sql  tpcds-q88.sql  tpcds-q89.sql  tpcds-q96.sql  tpcds-q98.sql
client/tests/: benchmarks.py  collect_benchmark_results.py  create-benchmark-tbls.sql  create-table-with-many-partitions-blocks.sh  create-tbls-s3.sql  create-tbls.sql  generate_reports.sh  generate_runtime_plots.R  load-benchmark-data.sh  load-test-data-s3.sh  load-test-data.sh  perf_db_create.sql  run-all-tests.sh  run_authorization_tests.py  run_benchmarks.py  run_kerberos_tests.py
(+348 files in other folders)
